--- a/moden3.html
+++ b/moden3.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <div>
-      <a href="moden0.html"><img src="Logo.png" width="100"></a>
+      <a href="index.html"><img src="Logo.png" width="100"></a>
     </div>
     <div id="nav_menu">
     <ul style="list-style-type:none">
