--- a/moden1.html
+++ b/moden1.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <div>
-      <a href="moden0.html"><img src="Logo.png" width="100"></a>
+      <a href="index.html"><img src="Logo.png" width="100"></a>
     </div>
     <div id="nav_menu">
     <ul style="list-style-type:none">
@@ -36,7 +36,7 @@
       <br>
       <br>
       <br>
-      <a1>회사소개</a1><br>      
+      <a1>회사소개</a1><br>
       <br>
       <br>
       <br>
