--- a/moden2.html
+++ b/moden2.html
@@ -30,6 +30,7 @@
       <li style="display:inline"><a href="moden1.html">회사소개</li></a>
       <li style="display:inline"><a href="moden2.html">맴버소개</li></a>
       <li style="display:inline"><a href="moden3.html">프로그램</li></a>
+      <li style="display:inline"><a href="moden4.html">Dear Friend</li></a>
     </ul>
     </div>
     <div id=text>
@@ -49,8 +50,8 @@
       <br>
       <br>
       <img src="NickKim.jpg" width="350">
-      <a1>Nick Kim - </a1>
-      <a1>ERP 컨설턴트 (SAP / Microsoft)</a1>
+      <a1>Andy Hong - </a1>
+      <a1>프로그래머, 공인회계사</a1>
       <br>
       <br>
       <br>
