--- a/moden4.html
+++ b/moden4.html
@@ -37,16 +37,20 @@
       <br>
       <br>
       <br>
-      <a1>회사소개</a1><br>
+      <a1>Dear Friend</a1><br>
+      <br>
+      <br>
+      <img src="moden4.jpg" width="800">
       <br>
       <br>
       <br>
-      <br>
-      <br>
-      <a1>모든생각은 남을 도와줍니다</a1><br>
-      <a1>모든생각은 항상 재미있게 합니다</a1><br>
-      <a1>우리는 모든생각을 통해 남을 도와주며 재미있게 살아요</a1><br><br>
-      <img src="moden1.jpg" width="800">
+      <a1>이곳에 내 생각을 적었어</a1><br>
+      <a1>내 생각을 잘 전달하기 좀 어려운 부분이 있지만</a1><br>
+      <a1>아무튼 우리의 인생이라는 것이 무의미 하다는 생각이 많이 들었어</a1><br>
+      <a1>모두가 돈을 벌기위해 열심히 바쁘게 복잡하게 사는 이 세상</a1><br>
+      <a1>하나님께서는 내가 돈을 버는 것 보다 남을 도와주며 사는 것을 더 기뻐하실 것 같다는 생각이 들어</a1><br>
+      <a1>내가 할 수 있는 것으로 남을 도와주며 살다가 하나님 앞으로 가면 하나님 좋아하시지 않을까?</a1><br><br>
+      <a1>프로그램을 만들어 우리가 남을 도와주며, 의미있고 재미있게 살 수 있지 않을까?</a1><br><br>
     </div>
   </body>
 </html>
