--- a/moden3.html
+++ b/moden3.html
@@ -30,6 +30,7 @@
       <li style="display:inline"><a href="moden1.html">회사소개</li></a>
       <li style="display:inline"><a href="moden2.html">맴버소개</li></a>
       <li style="display:inline"><a href="moden3.html">프로그램</li></a>
+      <li style="display:inline"><a href="moden4.html">Dear Friend</li></a>
     </ul>
     </div>
     <div id=text>
@@ -42,9 +43,9 @@
       <br>
       <br>
       <br>
-      <a1>프로그램을 잘 만들었습니다.</a1><br>
-      <a1>매출 매입 관리를 편리하게 할 수 있습니다.</a1><br>
-      <a1>한번 써 보세요</a1><br><br>
+      <a1>프로그램을 만들었습니다.</a1><br>
+      <a1>매출 매입 관리를 편리하게 할 수 있도록 도와줍니다.</a1><br>
+      <a1>개인 자산관리를 잘 할 수 있게 돠와줍니다.</a1><br><br>
       <img src="program.jpg" width="800">
     </div>
   </body>
