--- a/moden4.html
+++ b/moden4.html
@@ -37,7 +37,7 @@
       <br>
       <br>
       <br>
-      <a1>Dear Friend</a1><br>
+      <a1><b>Dear Friend</b></a1><br>
       <br>
       <br>
       <img src="moden4.jpg" width="800">
