--- a/moden4.html
+++ b/moden4.html
@@ -48,8 +48,7 @@
       <a1>내 생각을 잘 전달하기 좀 어려운 부분이 있지만</a1><br>
       <a1>아무튼 우리의 인생이라는 것이 무의미 하다는 생각이 많이 들었어</a1><br>
       <a1>모두가 돈을 벌기위해 열심히 바쁘게 복잡하게 사는 이 세상</a1><br>
-      <a1>하나님께서는 내가 돈을 버는 것 보다 남을 도와주며 사는 것을 더 기뻐하실 것 같다는 생각이 들어</a1><br>
-      <a1>내가 할 수 있는 것으로 남을 도와주며 살다가 하나님 앞으로 가면 하나님 좋아하시지 않을까?</a1><br><br>
+      <a1>그만 돈돈 거리고 내가 할 수 있는 것으로 남을 도와주며 한 평생 살다가 간다면 어떨까?</a1><br><br>
       <a1>프로그램을 만들어 우리가 남을 도와주며, 의미있고 재미있게 살 수 있지 않을까?</a1><br><br>
     </div>
   </body>
